--- a/docs/readme.tex
+++ b/docs/readme.tex
@@ -366,8 +366,8 @@ illustrated in \cref{fig:strain-modes:2d}.
     \label{fig:strain-modes:2d}
 \end{figure}
 
-The first shear mode, in \cref{fig:strain-modes:2d}(b), c
-orresponds to a strain tensor of the following structure
+The first shear mode, in \cref{fig:strain-modes:2d}(b),
+corresponds to a strain tensor of the following structure
 \begin{equation}
     \label{eq:strain-modes:basic}
     \underline{\underline{\varepsilon}}
