Various minor updates

--- a/docs/readme.tex
+++ b/docs/readme.tex
@@ -1,22 +1,11 @@
 \documentclass[namecite, fleqn]{goose-article}
 
 \title{%
-    GMatElastoPlasticQPot --
-    An implementation for an elasto-plastic continuum model
+    Elasto-plastic continuum model
     based on a manifold of quadratic potentials
 }
 
-\author{T.W.J.~de~Geus}
-
-\contact{%
-    $^*$Contact: %
-    \href{mailto:tom@geus.me}{tom@geus.me} %
-    \hspace{1mm}--\hspace{1mm} %
-    \href{http://www.geus.me}{www.geus.me}%
-    \hspace{1mm}--\hspace{1mm} %
-    \href{https://github.com/tdegeus/GMatElastoPlasticQPot}
-    {https://github.com/tdegeus/GMatElastoPlasticQPot}%
-}
+\author{Tom W.J.\ de Geus}
 
 \hypersetup{pdfauthor={T.W.J. de Geus}}
 
