--- a/docs/readme.tex
+++ b/docs/readme.tex
@@ -1,4 +1,4 @@
-\documentclass[namecite, fleqn]{goose-article}
+\documentclass[fleqn]{goose-article}
 
 \title{%
     Elasto-plastic continuum model
@@ -23,7 +23,7 @@
 \noindent
 A microscopic continuum model of plasticity in amorphous solids is proposed.
 This model uses a strain energy with multiple minima to capture the effect of plasticity.
-This model was used for the first time in \citet{DeGeus2018}
+This model was used for the first time in \citet{DeGeus2019}
 and was partly inspired on the work of \citet{Jagla2017}.
 
 \keywords{elasto-plasticity; linear elasticity}
@@ -747,6 +747,7 @@ This results in a stress response
     2 \mu \, \T{\varepsilon}_\mathrm{d}
 \end{equation}
 
+\bibliographystyle{unsrtnat}
 \bibliography{library}
 
 \end{document}
