--- a/docs/library.bib
+++ b/docs/library.bib
@@ -1,9 +1,12 @@
-@article{DeGeus2018,
- arxivid = {1904.07635},
- author = {de Geus, T.W.J. and Popovi{\'{c}}, M. and Ji, W. and Rosso, A. and Wyart, M.},
- journal = {Submitted},
- title = {{How collective asperity detachments nucleate slip at frictional interfaces}},
- year = {2019}
+@article{DeGeus2019,
+arxivId = {1904.07635},
+author = {de Geus, T.W.J. and Popovi{\'{c}}, M. and Ji, W. and Rosso, A. and Wyart, M.},
+doi = {10.1073/pnas.1906551116},
+eprint = {1904.07635},
+journal = {Proc. Natl. Acad. Sci.},
+pages = {201906551},
+title = {{How collective asperity detachments nucleate slip at frictional interfaces}},
+year = {2019}
 }
 
 @article{Jagla2017,
