--- a/docs/readme.tex
+++ b/docs/readme.tex
@@ -165,6 +165,16 @@ Note that
     \label{fig:dU-dV:elas}
 \end{figure}
 
+Note that a tangent or stiffness tensor can be also easily defined:
+\begin{equation}
+    \delta \bm{\sigma} \equiv \mathbb{C} : \delta \bm{\varepsilon}
+\end{equation}
+(which for the linear model is valid independent of the size of the variation),
+for which trivially
+\begin{equation}
+    \mathbb{C} = \frac{K}{d} \bm{I} \bm{I} + G \mathbb{I}_d
+\end{equation}
+
 \subsection{Plastic potential -- Parabolic potential with multiple minima}
 
 The model is now extended to account for plasticity.
@@ -249,6 +259,9 @@ from which it is observed that it exhibits stress jumps between different parabo
 because of the discontinuity in the second derivative of the elastic potential.
 This can be remedied, such as in the model presented below.
 
+Note that within (and only within) the elastic regime the
+elastic tangent or stiffness tensor holds.
+
 \subsection{Plastic potential -- Smooth parabolic potential with multiple minima}
 
 The remedy the discontinuity in the second derivative of the potential, it is smoothed as follows:
@@ -314,6 +327,9 @@ For completeness, also in case the expression for the entire stress tensor
 \end{equation}
 whereby, again, one has to assume that when $\varepsilon_\mathrm{d} = 0$ also
 $\T{\sigma}_\mathrm{d} = \T{0}$ in order to avoid zero division.
+
+Note that within (and only within) the elastic regime the
+elastic tangent or stiffness tensor holds.
 
 \begin{figure}[htp]
     \centering
